logging updates, dont run dev server in wsgi, favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
 
     <title>ZNode Status</title>
 
+    <link rel="shortcut icon" href="https://cdn.privex.io/privex.io/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://cdn.privex.io/privex.io/favicon.ico" type="image/x-icon">
+
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fontawesome -->
